basic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-hw
  namespace: ingress-basic  
spec:
  ports:
  - port: 8080
  selector:
    app: nodejs-hw
