basic-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-hw2
  namespace: ingress-basic  
spec:
  ports:
  - port: 8080
  selector:
    app: nodejs-hw2
