hw-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nodejs-hw
          servicePort: 8080
        path: /(.*)
      - backend:
          serviceName: nodejs-hw2
          servicePort: 8080
        path: /hw2(/|$)(.*)
